# FluxBT

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  USAGE.md  mypy.ini  pyproject.toml  ruff.toml
.github/: CODE_OF_CONDUCT.md  SECURITY.md
.github/workflows/: ci.yml
examples/: README.md  example_mean_reversion.ipynb  example_sma.ipynb
fluxbt/: cli.py
fluxbt/core/: broker.py  engine.py  metrics.py  portfolio.py
fluxbt/reports/: __init__.py  plotting.py
fluxbt/strategies/: __init__.py  base.py  mean_reversion.py  remote_loader.py  sma_crossover.py
quantbt/: __init__.py  cli.py
quantbt/core/: __init__.py  engine.py  orders.py  risk.py  utils.py
quantbt/data/: __init__.py  feed.py  loader.py
quantbt/reports/: report.py
quantbt/strategies/: __init__.py
tests/: test_engine.py  test_metrics.py  test_orders.py  test_portfolio.py
