[project]
name = "fluxbt"
version = "0.1.0"
description = "A minimal, modular single-asset backtesting framework for systematic trading"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "quantbt contributors" }
]
keywords = ["backtesting", "quant", "trading", "finance", "strategy"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "scipy>=1.11,<1.13",
  "matplotlib>=3.7",
  "yfinance>=0.2.36",
  "typer>=0.12",
]

[project.optional-dependencies]
reports = ["jinja2>=3.1"]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5.0",
  "black[jupyter]>=24.3.0",
  "mypy>=1.10.0",
  "pre-commit>=3.7.0",
  "jinja2>=3.1",
]

[project.scripts]
fluxbt = "fluxbt.cli:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py311", "py312"]

[tool.setuptools.packages.find]
include = ["fluxbt*"]
exclude = ["tests*", "examples*", "runs*", ".github*"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "PL", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["fluxbt"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
warn_unused_configs = true
disallow_any_generics = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
show_error_codes = true


